[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "backend-assessment"
version = "0.1.0"
description = "A minimal Python project scaffold"
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "Your Name" } ]
dependencies = []

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
